--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.12.RELEASE'
+
+    //AOP
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.5'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
+    compile group: 'org.springframework', name: 'spring-aop', version: '4.3.17.RELEASE'
 }
 
 test {
