--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     //web service
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    compile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
 }
 
 test {
